--- a/webmagic-core/pom.xml
+++ b/webmagic-core/pom.xml
@@ -28,6 +28,7 @@
         <dependency>
             <groupId>us.codecraft</groupId>
             <artifactId>xsoup</artifactId>
+            <version>0.3.1</version>
         </dependency>
 
         <dependency>
